[gd_scene load_steps=13 format=2]

[ext_resource path="res://gui/MatchGUI.gd" type="Script" id=1]
[ext_resource path="res://licensed/Salmon Sans 9 Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://licensed/Salmon Sans 9 Extra Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://licensed/Salmon Serif 9 Narrow Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://licensed/Salmon Sans 9 Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://gui/boost_prog.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 27
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 27
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 9
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="MatchGUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Team1Score" type="Label" parent="Control"]
visible = false
anchor_left = 0.25
anchor_right = 0.25
margin_left = -24.96
margin_top = 15.0
margin_right = 25.04
margin_bottom = 75.0
custom_colors/font_color = Color( 0.94902, 0.87451, 0.654902, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Team2Score" type="Label" parent="Control"]
visible = false
anchor_left = 0.75
anchor_right = 0.75
margin_left = -24.96
margin_top = 15.0
margin_right = 25.04
margin_bottom = 75.0
custom_colors/font_color = Color( 0.501961, 0.8, 0.945098, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clock" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -75.0
margin_top = 20.0
margin_right = 75.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Team1Name" type="Label" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -30.0
margin_right = -40.0
margin_bottom = 30.0
custom_colors/font_color = Color( 1, 0.74902, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Un-Bee-Lievable"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Team1Name"]
margin_left = 201.0
margin_top = -20.0
margin_right = 256.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 4 )
text = "Team"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Team2Name" type="Label" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = -30.0
margin_right = 320.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0.811765, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Hive It Both Ways"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control/Team2Name"]
margin_left = 30.0
margin_top = -20.0
margin_right = 85.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 4 )
text = "Team"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vs" type="Label" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 30, 30 )
custom_fonts/font = SubResource( 3 )
text = "vs"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chat" type="VBoxContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = -120.0
margin_right = -100.0
margin_bottom = -5.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Chat"]
margin_right = 440.0
margin_bottom = 89.0
mouse_filter = 2
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Chat/ScrollContainer"]
margin_right = 440.0
margin_bottom = 89.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="LineEdit" type="LineEdit" parent="Control/Chat"]
margin_top = 93.0
margin_right = 440.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 5 )

[node name="AbilityLabel" type="Label" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -85.0
margin_top = -53.0
margin_right = -15.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 6 )
text = "BOOST"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boost" type="TextureProgress" parent="Control/AbilityLabel"]
margin_top = 2.0
margin_right = 80.0
margin_bottom = 72.0
mouse_filter = 2
max_value = 1.0
step = 0.01
value = 1.0
texture_progress = ExtResource( 6 )
fill_mode = 4
radial_initial_angle = 270.0
radial_fill_degrees = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatTween" type="Tween" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="text_entered" from="Control/Chat/LineEdit" to="." method="send_message"]
